@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-java/maven-bin/ChangeLog,v 1.57 2009/05/12 19:33:02 ali_bush Exp $
 
+*maven-bin-3.0_rc2 (22 Sep 2010)
+
+  22 Sep 2010; Jesse Farinacci <jieryn@gmail.com>
+  -maven-bin-3.0_beta1.ebuild, -maven-bin-3.0_beta2.ebuild,
+  -maven-bin-3.0_beta3.ebuild, +maven-bin-3.0_rc2.ebuild:
+  maven-3.0-RC2 was staged -- test now! 3.0 is imminent
+
 *maven-bin-3.0_beta3 (30 Aug 2010)
 
   30 Aug 2010; Jesse Farinacci <jieryn@gmail.com>
